feat(DOL-18): Add request matcher for path parameters (#1)
* refractor code

* refractor code

* implement request matcher for path parameters

* rename rawCueExpectations to just cueExpectations
